# API-de-Musicas

./: .gitignore  README.md  pyproject.toml
src/: main.py
tests/: sample.ipynb  test.ipynb
