[project]
name = "jupyterproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Luasqk",email = "palarobrandaolucas@edu.unifil.br"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "youtube-search (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
